Fix background color of collapsible nav on mobile

--- a/web/static/css/site.css
+++ b/web/static/css/site.css
@@ -244,6 +244,7 @@
 {
   padding-left:0;
   padding-right:0;
+  background: #000;
 }
 
 .navbar-form
